--- a/SmartTilesDaemon/html/index.htm
+++ b/SmartTilesDaemon/html/index.htm
@@ -1,5 +1,112 @@
 <html>
+<head>
+    <meta charset="utf-8" />
+    <title>Hello World</title>
+    <script src="jquery.js"></script>
+    <style type="text/css">
+    body {
+        background-color: black;
+    }
+    table {
+        width: 100%;
+        height: 100%;
+    }
+    tr {
+        width: 100%;
+    }
+    td {
+        text-align: center;
+        vertical-align: center;
+    }
+    .bigred, .bigred-disabled {
+        vertical-align: center;
+        -moz-box-shadow:inset 0px 1px 0px 0px #f5978e;
+        -webkit-box-shadow:inset 0px 1px 0px 0px #f5978e;
+        box-shadow:inset 0px 1px 0px 0px #f5978e;
+        background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f) );
+        background:-moz-linear-gradient( center top, #f24537 5%, #c62d1f 100% );
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f');
+        background-color:#f24537;
+        -webkit-border-top-left-radius:20px;
+        -moz-border-radius-topleft:20px;
+        border-top-left-radius:20px;
+        -webkit-border-top-right-radius:20px;
+        -moz-border-radius-topright:20px;
+        border-top-right-radius:20px;
+        -webkit-border-bottom-right-radius:20px;
+        -moz-border-radius-bottomright:20px;
+        border-bottom-right-radius:20px;
+        -webkit-border-bottom-left-radius:20px;
+        -moz-border-radius-bottomleft:20px;
+        border-bottom-left-radius:20px;
+        text-indent:0;
+        border:1px solid #d02718;
+        display:inline-block;
+        color:#ffffff;
+        font-family:Times New Roman;
+        font-size:15px;
+        font-weight:bold;
+        font-style:normal;
+        height:65px;
+        line-height:65px;
+        width:80px;
+        text-decoration:none;
+        text-align:center;
+        text-shadow:1px 1px 0px #810e05;
+    }
+    .bigred-disabled {
+        background: grey;
+        border: darkgrey;
+        box-shadow: grey;
+        -moz-box-shadow:inset 0px 1px 0px 0px grey;
+        -webkit-box-shadow:inset 0px 1px 0px 0px grey;
+        text-shadow: 1px 1px 0px black;
+    }
+    .bigred:hover {
+        background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537) );
+        background:-moz-linear-gradient( center top, #c62d1f 5%, #f24537 100% );
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24537');
+        background-color:#c62d1f;
+    }
+    .bigred-disabled:hover {
+        background: grey;
+    }
+    .bigred:active {
+        position:relative;
+        top:1px;
+    }
+    </style>
+    <script>
+    function startIt() {
+        $.ajax({url: "index.htm",
+                type: "POST",
+                dataType:"text",
+                success: started});
+    }
+    function started() {
+        var button = $(".bigred");
+        button.prop("disabled", true);
+        button.addClass("bigred-disabled");
+        button.removeClass("disabled");
+        button.click(function(e){
+          e.preventDefault();
+          return false;
+        });
+    }
+    function readyFn() {
+        $('.bigred').click(startIt);
+    }
+    $(document).ready(readyFn);
+    </script>
+    
+</head>
 <body>
-Woo-hoo!
+    <table>
+    <tr><td>
+        <a href="#" class="bigred">Press me!</a>
+    </td></tr>
+    </table>
+    <form method="post">
+    </form>
 </body>
 </html>
