More css updates

--- a/SmartTilesDaemon/html/index.htm
+++ b/SmartTilesDaemon/html/index.htm
@@ -46,10 +46,9 @@
     }
     .bigred-text, .bigred-text-disabled {
         font-family:Times New Roman;
-        font-size:100pt;
+        font-size: xx-large;
         font-weight:bold;
         font-style:normal;
-        line-height:200pt;
 
         text-decoration:none;
         text-align:center;
